# markdown-mindmap-studio

./: .gitignore  CLAUDE.md  LICENSE  README-zh.tw.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CUSTOMIZATION.md  GETTING-STARTED.md  GROWTH-STRATEGY.md
editor/: server.py
editor/config/: agent_prompt.md  features.json
editor/locales/: en.json  zh-TW.json
editor/static/: editor.js  index.html  style.css
editor/tests/: conftest.py  test_api.py  test_qa_visual.py  test_ui.py
mindmap/01_pokemon_types/: content.md
mindmap/01_pokemon_types/requirements/: content.md
mindmap/01_pokemon_types/requirements/ai_data/: content.md
mindmap/01_your_journey_begins/: content.md
mindmap/01_your_journey_begins/professor_oak/: content.md
mindmap/01_your_journey_begins/rival_battle/: content.md
mindmap/01_your_journey_begins/route_1/: content.md
mindmap/02_battle_system/: content.md
mindmap/02_battle_system/requirements/: content.md
mindmap/02_first_gym_challenge/: content.md
mindmap/02_first_gym_challenge/boulder_badge/: content.md
mindmap/02_first_gym_challenge/brock_fight/: content.md
mindmap/02_first_gym_challenge/preparation/: content.md
mindmap/03_evolution/: content.md
mindmap/03_evolution/requirements/: content.md
mindmap/03_ss_anne_adventure/: content.md
mindmap/03_ss_anne_adventure/mew_rumors/: content.md
mindmap/03_ss_anne_adventure/rival_rematch/: content.md
mindmap/03_ss_anne_adventure/the_captain/: content.md
scripts/: capture_demo.py  export_mindmap.py  test_openrouter.py
(+15 files in other folders)
